--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
           if [ -f pyproject.toml ]; then poetry install; fi
       - name: Test with pytest
         run: |
-          pytest
+          poetry run pytest
